<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_product_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.arutr.bakeryproductapp.ProductCreationActivity">

    <EditText
        android:id="@+id/et_product_creation_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_name"
        />

    <EditText
        android:id="@+id/et_product_creation_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_product_creation_name"
        android:hint="@string/product_description"
        />

    <EditText
        android:id="@+id/et_product_creation_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_product_creation_description"
        android:inputType="number"
        android:hint="@string/product_weight"
        />

    <EditText
        android:id="@+id/et_product_creation_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_product_creation_weight"
        android:inputType="number"
        android:hint="@string/product_price"
        />

    <EditText
        android:id="@+id/et_product_creation_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_product_creation_price"
        android:hint="@string/product_category"
        />

    <EditText
        android:id="@+id/et_product_creation_image_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_product_creation_category"
        android:hint="@string/product_image_url"
        />

    <Button
        android:id="@+id/accept_creation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_product_creation_image_url"
        android:layout_centerHorizontal="true"
        android:text="@string/accept_btn_text"/>

    <Button
        android:id="@+id/accept_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_product_creation_image_url"
        android:layout_centerHorizontal="true"
        android:text="@string/update_btn_text"/>

</RelativeLayout>
